# team_lambda

./: CMakeLists.txt  CMakeLists.txt~  example.txt  readme.md  readme.md~  sus  todoList.txt  todoList.txt~
detection/dlib_detector/: CMakeLists.txt
detection/dlib_detector/launch/: face_detector.launch  face_detector_mapper_robot.launch  face_detector_mapper_simul.launch
detection/dlib_detector/src/: face_detector.cpp
detection/localizer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
detection/localizer/launch/: localizer_node_robot.launch  localizer_node_simul.launch
detection/localizer/scripts/: faceinteract.py  facemap.py
detection/recognition/: CMakeLists.txt  CMakeLists.txt~  package.xml
detection/recognition/launch/: generateDescriptor.launch  generateDescriptor.launch~  learnDescriptors.launch  matchDescriptors.launch
detection/recognition/learnedFaces/: 0  1  10  11  12  3  4  5  6  7  8  9
detection/recognition/src/: descriptorMaker.cpp  distanceCalculator.cpp  distanceCalculator.cpp~
detection/ring_detector/: CMakeLists.txt  CMakeLists.txt~
detection/ring_detector/launch/: blueFilter.launch  find_plane.launch  forwarder.launch  kinect_without_turtlebot.launch  launchPointCLoudManipulations.launch  launchPointCLoudManipulations.launch~  launchPointCLoudManipulations1.launch  planes.launch  runAll.launch  voxelgrid.launch
detection/ring_detector/src/: contraster.cpp  contraster.cpp~  find_circ.cpp  find_circ.cpp~  find_cyl.cpp  find_cyl.cpp~  find_grn.cpp  find_plane.cpp  seperateByColorAndDistance.cpp  seperateByColorAndDistance.cpp~  voxelgrid.cpp
launch/: amcl_demo.launch  amcl_demo.launch~  blueFilter.launch~  cylinders.launch  face_detector_visualizations.launch  launchPointCLoudManipulations.launch  launchPointCLoudManipulations.launch~  mapGoals.launch~  runAll.launch  voxelgrid.launch
maps/: new_final_map.yaml  new_final_map_little.pgm  new_final_map_little.yaml  new_final_map_littleOLD.pgm
maps/GazeboEnvironment/: mapaGazebo.pgm  mapaGazebo.yaml
maps/Ucilnica/: mapaucilnice.pgm
maps/layers/: wall_layer.pgm
maps/polygon/: polygonV1.pgm  polygonV1fixed.yaml
navigation/exercise6/: CMakeLists.txt
navigation/exercise6/launch/: blueFilter.launch  cylinders.launch~  launchPointCLoudManipulations.launch~  mapGoals.launch
navigation/exercise6/src/: MarkOnMap.cpp~  find_red.cpp~  goal_loop.cpp  goal_loop.cpp~
navigation/map_goals/: CMakeLists.txt  CMakeLists.txt~  package.xml
navigation/map_goals/launch/: mapGoals.launch
navigation/map_goals/src/: goal_looop.cpp  goal_loop.cpp  goal_loop.cpp~  gool_loop1.cpp
navigation/maze_navigator/: CMakeLists.txt  CMakeLists.txt.notused  package.xml
navigation/maze_navigator/action/: Navigate.action
navigation/maze_navigator/include/maze_navigator/: action_const.h  costmap.h  expl_map.h  expl_planner.h  exploration_planner.h  geom_util.h  logic.h  mobject.h  robot_pose.h  visualizer.h
navigation/maze_navigator/launch/: amcl_demo.launch  amcl_simul.launch  maze_navigator.launch  maze_navigator_simul.launch
navigation/maze_navigator/maps/: new_final_map.pgm  new_final_map_littlev2.pgm
navigation/maze_navigator/maps/GazeboEnvironment/: mapaGazeboFixed.pgm  mapaGazeboFixed.yaml
navigation/maze_navigator/maps/GazeboEnvironment/layers/: simple_layer.pgm
navigation/maze_navigator/maps/Ucilnica/: mapaucilnice.yaml
navigation/maze_navigator/maps/layers/: east_west_layer.pgm  north_south_layer.pgm  simple_layer.pgm  south_north_layer.pgm  west_east_layer.pgm
navigation/maze_navigator/maps/polygon/: polygonV1.yaml  polygonV1fixed.pgm
navigation/maze_navigator/src/: costmap.cpp  expl_map.cpp  expl_planner.cpp  exploration_planner.cpp  logic.cpp  maze_navigator.cpp  mobject.cpp  navigation_server.cpp  ring_pickup.cpp  robot_pose.cpp  visualizer.cpp
planning/main_planner/: CMakeLists.txt  package.xml
planning/main_planner/src/: main_planner.cpp
src/: CMakeLists.txt  CMakeLists.txt~  find_blu.cpp  find_blu.cpp~  find_cyl.cpp  find_cyl.cpp~  find_grn.cpp~  find_plane.cpp~  find_red.cpp  map_goals (copy).cpp  map_goals.cpp  map_goals.cpp~  map_goalsDELA.cpp~  mark_on_map.cpp  mark_on_map.cpp~  rand_goal.cpp  seperateByColorAndDistance.cpp  seperateByColorAndDistance.cpp~  voxelgrid.cpp~
